// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`move can move questions between blocks: #0 initial state 1`] = `
Immutable.List [
  Object {
    "id": "ba",
    "questions": Immutable.List [
      Object {
        "content": "bla",
        "id": "qa",
      },
      Object {
        "content": "blu",
        "id": "qb",
      },
      Object {
        "content": "blab",
        "id": "qc",
      },
      Object {
        "content": "bli",
        "id": "qd",
      },
    ],
  },
  Object {
    "id": "bb",
    "questions": Immutable.List [
      Object {
        "content": "bleb",
        "id": "qe",
      },
      Object {
        "content": "blaa",
        "id": "qf",
      },
      Object {
        "content": "blaaa",
        "id": "qg",
      },
    ],
  },
  Object {
    "id": "bc",
    "questions": Immutable.List [
      Object {
        "content": "blaaaa",
        "id": "qh",
      },
      Object {
        "content": "blabb",
        "id": "qi",
      },
    ],
  },
  Object {
    "id": "bd",
    "questions": Immutable.List [
      Object {
        "content": "blub",
        "id": "qj",
      },
    ],
  },
]
`;

exports[`move can move questions between blocks: #1 move c-1 to a-3 1`] = `
Immutable.List [
  Object {
    "id": "ba",
    "questions": Immutable.List [
      Object {
        "content": "bla",
        "id": "qa",
      },
      Object {
        "content": "blu",
        "id": "qb",
      },
      Object {
        "content": "blab",
        "id": "qc",
      },
      Object {
        "content": "blabb",
        "id": "qi",
      },
      Object {
        "content": "bli",
        "id": "qd",
      },
    ],
  },
  Object {
    "id": "bb",
    "questions": Immutable.List [
      Object {
        "content": "bleb",
        "id": "qe",
      },
      Object {
        "content": "blaa",
        "id": "qf",
      },
      Object {
        "content": "blaaa",
        "id": "qg",
      },
    ],
  },
  Object {
    "id": "bc",
    "questions": Immutable.List [
      Object {
        "content": "blaaaa",
        "id": "qh",
      },
    ],
  },
  Object {
    "id": "bd",
    "questions": Immutable.List [
      Object {
        "content": "blub",
        "id": "qj",
      },
    ],
  },
]
`;

exports[`move can move questions between blocks: #2 move c-0 to a-0 1`] = `
Immutable.List [
  Object {
    "id": "ba",
    "questions": Immutable.List [
      Object {
        "content": "bla",
        "id": "qa",
      },
      Object {
        "content": "blu",
        "id": "qb",
      },
      Object {
        "content": "blab",
        "id": "qc",
      },
      Object {
        "content": "blabb",
        "id": "qi",
      },
      Object {
        "content": "bli",
        "id": "qd",
      },
      Object {
        "content": "blaaaa",
        "id": "qh",
      },
    ],
  },
  Object {
    "id": "bb",
    "questions": Immutable.List [
      Object {
        "content": "bleb",
        "id": "qe",
      },
      Object {
        "content": "blaa",
        "id": "qf",
      },
      Object {
        "content": "blaaa",
        "id": "qg",
      },
    ],
  },
  Object {
    "id": "bd",
    "questions": Immutable.List [
      Object {
        "content": "blub",
        "id": "qj",
      },
    ],
  },
]
`;

exports[`move can move questions between blocks: #3 move b-1 to c-0 1`] = `
Immutable.List [
  Object {
    "id": "ba",
    "questions": Immutable.List [
      Object {
        "content": "bla",
        "id": "qa",
      },
      Object {
        "content": "blu",
        "id": "qb",
      },
      Object {
        "content": "blab",
        "id": "qc",
      },
      Object {
        "content": "blabb",
        "id": "qi",
      },
      Object {
        "content": "bli",
        "id": "qd",
      },
      Object {
        "content": "blaaaa",
        "id": "qh",
      },
      Object {
        "content": "blaa",
        "id": "qf",
      },
    ],
  },
  Object {
    "id": "bb",
    "questions": Immutable.List [
      Object {
        "content": "bleb",
        "id": "qe",
      },
      Object {
        "content": "blaaa",
        "id": "qg",
      },
    ],
  },
  Object {
    "id": "bd",
    "questions": Immutable.List [
      Object {
        "content": "blub",
        "id": "qj",
      },
    ],
  },
]
`;

exports[`move can move questions between blocks: #4 move d-0 to a-0 1`] = `
Immutable.List [
  Object {
    "id": "ba",
    "questions": Immutable.List [
      Object {
        "content": "bla",
        "id": "qa",
      },
      Object {
        "content": "blu",
        "id": "qb",
      },
      Object {
        "content": "blab",
        "id": "qc",
      },
      Object {
        "content": "blabb",
        "id": "qi",
      },
      Object {
        "content": "bli",
        "id": "qd",
      },
      Object {
        "content": "blaaaa",
        "id": "qh",
      },
      Object {
        "content": "blaa",
        "id": "qf",
      },
      Object {
        "content": "blub",
        "id": "qj",
      },
    ],
  },
  Object {
    "id": "bb",
    "questions": Immutable.List [
      Object {
        "content": "bleb",
        "id": "qe",
      },
      Object {
        "content": "blaaa",
        "id": "qg",
      },
    ],
  },
  Object {
    "id": "bd",
    "questions": Immutable.List [],
  },
]
`;

exports[`move can reorder questions within blocks 1`] = `
Immutable.List [
  Object {
    "id": "ba",
    "questions": Immutable.List [
      Object {
        "content": "bla",
        "id": "qa",
      },
      Object {
        "content": "blab",
        "id": "qc",
      },
      Object {
        "content": "bli",
        "id": "qd",
      },
      Object {
        "content": "blu",
        "id": "qb",
      },
    ],
  },
  Object {
    "id": "bb",
    "questions": Immutable.List [
      Object {
        "content": "bleb",
        "id": "qe",
      },
      Object {
        "content": "blaa",
        "id": "qf",
      },
      Object {
        "content": "blaaa",
        "id": "qg",
      },
    ],
  },
  Object {
    "id": "bc",
    "questions": Immutable.List [
      Object {
        "content": "blaaaa",
        "id": "qh",
      },
      Object {
        "content": "blabb",
        "id": "qi",
      },
    ],
  },
  Object {
    "id": "bd",
    "questions": Immutable.List [
      Object {
        "content": "blub",
        "id": "qj",
      },
    ],
  },
]
`;
